--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".Loai_MonAn"
+            android:exported="false"
+            android:label="@string/title_activity_loai_mon_an"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".customButton_into_CTMonAn"
+            android:exported="false" />
+        <activity
             android:name=".Menu"
             android:exported="false"
             android:label="@string/title_activity_menu" />
