--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".TrangChu"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_trang_chu"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Login"
             android:exported="false" />
