--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,16 @@
         tools:targetApi="31">
         <activity
             android:name=".TrangChu"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_trang_chu"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".Login"
             android:exported="false" />
@@ -43,12 +50,8 @@
             android:exported="false" />
         <activity
             android:name=".HoaDon"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
