--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".ThemNhanVien"
+            android:exported="false" />
+        <activity
             android:name=".GioHang"
             android:exported="false" />
         <activity
@@ -52,8 +55,7 @@
             android:exported="false" />
         <activity
             android:name=".HoaDon"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
