--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".ThemBanAn"
+            android:exported="false"
+            android:theme="@style/PopUpActivity" />
+        <activity
             android:name=".ThemNhanVien"
             android:exported="false" />
         <activity
@@ -55,7 +59,7 @@
             android:exported="false" />
         <activity
             android:name=".HoaDon"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
