Thêm chức năng quản lý món ăn, quản lý loại món

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,12 @@
         <activity
             android:name=".ThemLoaiMonAn"
             android:theme="@style/PopUpActivity"
+            android:label="LOẠI MÓN ĂN"
             />
+        <activity
+            android:name=".ThemLoaiMon_ActivityMonAn"
+            android:theme="@style/PopUpActivity"
+            android:label="LOẠI MÓN ĂN" />
     </application>
 
 </manifest>
