--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,18 +24,20 @@
             android:exported="false" />
         <activity
             android:name=".TrangChu"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_trang_chu"
             android:theme="@style/AppTheme">
+
+        </activity>
+        <activity
+            android:name=".Login"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Login"
-            android:exported="false" />
         <activity
             android:name=".Loai_MonAn"
             android:exported="false"
@@ -48,15 +50,6 @@
             android:name=".Menu"
             android:exported="false"
             android:label="@string/title_activity_menu" />
-        <activity
-            android:name=".MangVe"
-            android:exported="false" />
-        <activity
-            android:name=".Tang2"
-            android:exported="false" />
-        <activity
-            android:name=".Tang1"
-            android:exported="false" />
         <activity
             android:name=".HoaDon"
             android:exported="false" />
